--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "sass": "^1.54.5"
