--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
+    "netlify-cli": "^2.71.0",
     "typescript": "^4.8.2"
   }
 }
